{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 403,
  "lineage": "f88e4e4b-cb41-6736-ab5c-703358f86111",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06637f10d8866f375",
            "association_id": "eipassoc-0ee8cd398e471da09",
            "domain": "vpc",
            "id": "eipalloc-06637f10d8866f375",
            "network_border_group": "us-east-1",
            "network_interface": "eni-030a90d13b594826d",
            "private_dns": "ip-10-0-0-199.ec2.internal",
            "private_ip": "10.0.0.199",
            "public_dns": "ec2-52-7-134-44.compute-1.amazonaws.com",
            "public_ip": "52.7.134.44",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "ChargeCode": "04NSOC.SUPP.0000.NSV"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c4cc0a40dd47b942",
            "arn": "arn:aws:ec2:us-east-1:972275553271:instance/i-0623b24d761ec408e",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "registrion_profile",
            "id": "i-0623b24d761ec408e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01c7ec339b59b8a17",
            "private_dns": "ip-10-0-2-27.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.27",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:972275553271:key/54e23154-c30f-4525-bcc7-3320dcdc0691",
                "throughput": 125,
                "volume_id": "vol-0d4070f13d3f12485",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f6192fade250a173",
            "tags": {
              "Name": "app-instance"
            },
            "tags_all": {
              "ChargeCode": "04NSOC.SUPP.0000.NSV",
              "Name": "app-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e1a8d80031a2da3f"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.instance_profile",
            "aws_iam_role.ssm_fleet_ec2",
            "aws_security_group.app-sg",
            "aws_subnet.private-app",
            "aws_vpc.main",
            "data.aws_ami.ami",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c4cc0a40dd47b942",
            "arn": "arn:aws:ec2:us-east-1:972275553271:instance/i-0b4a787f601057742",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "registrion_profile",
            "id": "i-0b4a787f601057742",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0644ca88f14d5747e",
            "private_dns": "ip-10-0-3-228.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.228",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:972275553271:key/54e23154-c30f-4525-bcc7-3320dcdc0691",
                "throughput": 125,
                "volume_id": "vol-0cf8f0cb0e3cbfb99",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ed86abb35d9a6c5c",
            "tags": {
              "Name": "app-instance"
            },
            "tags_all": {
              "ChargeCode": "04NSOC.SUPP.0000.NSV",
              "Name": "app-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e1a8d80031a2da3f"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.instance_profile",
            "aws_iam_role.ssm_fleet_ec2",
            "aws_security_group.app-sg",
            "aws_subnet.private-app",
            "aws_vpc.main",
            "data.aws_ami.ami",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c4cc0a40dd47b942",
            "arn": "arn:aws:ec2:us-east-1:972275553271:instance/i-042dc3573919f16e9",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "registrion_profile",
            "id": "i-042dc3573919f16e9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-029bb45c17e14b015",
            "private_dns": "ip-10-0-4-117.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.117",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:972275553271:key/54e23154-c30f-4525-bcc7-3320dcdc0691",
                "throughput": 125,
                "volume_id": "vol-089ae2effdb50276f",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00b5194cb7083bd61",
            "tags": {
              "Name": "db-instance"
            },
            "tags_all": {
              "ChargeCode": "04NSOC.SUPP.0000.NSV",
              "Name": "db-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03c5748db570cdc06"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.instance_profile",
            "aws_iam_role.ssm_fleet_ec2",
            "aws_security_group.db-sg",
            "aws_subnet.private-db",
            "aws_vpc.main",
            "data.aws_ami.ami",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c4cc0a40dd47b942",
            "arn": "arn:aws:ec2:us-east-1:972275553271:instance/i-0e9a2f142ce40e050",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "registrion_profile",
            "id": "i-0e9a2f142ce40e050",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04d913a5fd0e34ad7",
            "private_dns": "ip-10-0-5-79.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.5.79",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:972275553271:key/54e23154-c30f-4525-bcc7-3320dcdc0691",
                "throughput": 125,
                "volume_id": "vol-040a52b83d0879939",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-031ef2cd2f541f115",
            "tags": {
              "Name": "db-instance"
            },
            "tags_all": {
              "ChargeCode": "04NSOC.SUPP.0000.NSV",
              "Name": "db-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03c5748db570cdc06"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.instance_profile",
            "aws_iam_role.ssm_fleet_ec2",
            "aws_security_group.db-sg",
            "aws_subnet.private-db",
            "aws_vpc.main",
            "data.aws_ami.ami",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jumpbox-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c4cc0a40dd47b942",
            "arn": "arn:aws:ec2:us-east-1:972275553271:instance/i-0f94707cad1d6b5e1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f94707cad1d6b5e1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0677414dc9e2fa65d",
            "private_dns": "ip-10-0-0-206.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.206",
            "public_dns": "ec2-3-88-237-51.compute-1.amazonaws.com",
            "public_ip": "3.88.237.51",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:972275553271:key/54e23154-c30f-4525-bcc7-3320dcdc0691",
                "throughput": 125,
                "volume_id": "vol-06c5c6aa4e21d2973",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a4aada047f393b9c",
            "tags": {
              "Name": "jumpbox-instance"
            },
            "tags_all": {
              "ChargeCode": "04NSOC.SUPP.0000.NSV",
              "Name": "jumpbox-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b8e6ab6d712fe1cc"
            ]
          },
          "dependencies": [
            "aws_security_group.jumpbox-sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ami",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:972275553271:internet-gateway/igw-06305361060d01ba5",
            "id": "igw-06305361060d01ba5",
            "owner_id": "972275553271",
            "tags_all": {
              "ChargeCode": "04NSOC.SUPP.0000.NSV"
            },
            "vpc_id": "vpc-0c11ed682748d46b2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:972275553271:loadbalancer/app/alb-nginx/50c72fe17993af5a",
            "arn_suffix": "app/alb-nginx/50c72fe17993af5a",
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-nginx-1725023755.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:972275553271:loadbalancer/app/alb-nginx/50c72fe17993af5a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-nginx",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a04c16ccc2272afa"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02df1e0ac5f5b2262"
              },
              {
                "subnet_id": "subnet-0a4aada047f393b9c"
              }
            ],
            "subnets": [
              "subnet-02df1e0ac5f5b2262",
              "subnet-0a4aada047f393b9c"
            ],
            "tags_all": {
              "ChargeCode": "04NSOC.SUPP.0000.NSV"
            },
            "vpc_id": "vpc-0c11ed682748d46b2",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_http_slistener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:972275553271:listener/app/alb-nginx/50c72fe17993af5a/34f1c9c95db58d2f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:972275553271:targetgroup/nginx-ce431-tg/cb0fcb91dbe96541",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:972275553271:listener/app/alb-nginx/50c72fe17993af5a/34f1c9c95db58d2f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:972275553271:loadbalancer/app/alb-nginx/50c72fe17993af5a",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "ChargeCode": "04NSOC.SUPP.0000.NSV"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app_load_balancer",
            "aws_lb_target_group.alb_target_group",
            "aws_security_group.alb-sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:972275553271:targetgroup/nginx-ce431-tg/cb0fcb91dbe96541",
            "arn_suffix": "targetgroup/nginx-ce431-tg/cb0fcb91dbe96541",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 300,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 60,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:972275553271:targetgroup/nginx-ce431-tg/cb0fcb91dbe96541",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "nginx-ce431-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "ChargeCode": "04NSOC.SUPP.0000.NSV"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c11ed682748d46b2"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:972275553271:targetgroup/nginx-ce431-tg/cb0fcb91dbe96541-20230117045227928900000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:972275553271:targetgroup/nginx-ce431-tg/cb0fcb91dbe96541",
            "target_id": "i-0623b24d761ec408e"
          },
          "dependencies": [
            "aws_iam_instance_profile.instance_profile",
            "aws_iam_role.ssm_fleet_ec2",
            "aws_instance.app-instance",
            "aws_lb_target_group.alb_target_group",
            "aws_security_group.app-sg",
            "aws_subnet.private-app",
            "aws_vpc.main",
            "data.aws_ami.ami",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:972275553271:targetgroup/nginx-ce431-tg/cb0fcb91dbe96541-20230117045228066700000007",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:972275553271:targetgroup/nginx-ce431-tg/cb0fcb91dbe96541",
            "target_id": "i-0b4a787f601057742"
          },
          "dependencies": [
            "aws_iam_instance_profile.instance_profile",
            "aws_iam_role.ssm_fleet_ec2",
            "aws_instance.app-instance",
            "aws_lb_target_group.alb_target_group",
            "aws_security_group.app-sg",
            "aws_subnet.private-app",
            "aws_vpc.main",
            "data.aws_ami.ami",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06637f10d8866f375",
            "connectivity_type": "public",
            "id": "nat-0231d8f48d7f03634",
            "network_interface_id": "eni-030a90d13b594826d",
            "private_ip": "10.0.0.199",
            "public_ip": "52.7.134.44",
            "subnet_id": "subnet-0a4aada047f393b9c",
            "tags_all": {
              "ChargeCode": "04NSOC.SUPP.0000.NSV"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:972275553271:route-table/rtb-0997242411eb39bd9",
            "id": "rtb-0997242411eb39bd9",
            "owner_id": "972275553271",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0231d8f48d7f03634",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-app-rt"
            },
            "tags_all": {
              "ChargeCode": "04NSOC.SUPP.0000.NSV",
              "Name": "private-app-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c11ed682748d46b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.this",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:972275553271:route-table/rtb-0eae4095dd241deef",
            "id": "rtb-0eae4095dd241deef",
            "owner_id": "972275553271",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0231d8f48d7f03634",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-db-rt"
            },
            "tags_all": {
              "ChargeCode": "04NSOC.SUPP.0000.NSV",
              "Name": "private-db-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c11ed682748d46b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.this",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:972275553271:route-table/rtb-0a91c8d328dcd9c26",
            "id": "rtb-0a91c8d328dcd9c26",
            "owner_id": "972275553271",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06305361060d01ba5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {
              "ChargeCode": "04NSOC.SUPP.0000.NSV"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c11ed682748d46b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d255a3a495051845",
            "route_table_id": "rtb-0997242411eb39bd9",
            "subnet_id": "subnet-0f6192fade250a173"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.main",
            "aws_nat_gateway.this",
            "aws_route_table.private-app",
            "aws_subnet.private-app",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac45401c2ef1a178",
            "route_table_id": "rtb-0997242411eb39bd9",
            "subnet_id": "subnet-0ed86abb35d9a6c5c"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.main",
            "aws_nat_gateway.this",
            "aws_route_table.private-app",
            "aws_subnet.private-app",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08051e85cce2710c1",
            "route_table_id": "rtb-0eae4095dd241deef",
            "subnet_id": "subnet-00b5194cb7083bd61"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.main",
            "aws_nat_gateway.this",
            "aws_route_table.private-db",
            "aws_subnet.private-db",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa845393dccf580c",
            "route_table_id": "rtb-0eae4095dd241deef",
            "subnet_id": "subnet-031ef2cd2f541f115"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.main",
            "aws_nat_gateway.this",
            "aws_route_table.private-db",
            "aws_subnet.private-db",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-099946711016abb06",
            "route_table_id": "rtb-0a91c8d328dcd9c26",
            "subnet_id": "subnet-0a4aada047f393b9c"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec54e47a24be1d05",
            "route_table_id": "rtb-0a91c8d328dcd9c26",
            "subnet_id": "subnet-02df1e0ac5f5b2262"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:972275553271:security-group/sg-0a04c16ccc2272afa",
            "description": "Allow http and https traffi",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a04c16ccc2272afa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "972275553271",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-sg"
            },
            "tags_all": {
              "ChargeCode": "04NSOC.SUPP.0000.NSV",
              "Name": "alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c11ed682748d46b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:972275553271:security-group/sg-0e1a8d80031a2da3f",
            "description": "Allow alb inbound traffic on port 80",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e1a8d80031a2da3f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b8e6ab6d712fe1cc"
                ],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a04c16ccc2272afa"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app-sg",
            "name_prefix": "",
            "owner_id": "972275553271",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-sg"
            },
            "tags_all": {
              "ChargeCode": "04NSOC.SUPP.0000.NSV",
              "Name": "app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c11ed682748d46b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:972275553271:security-group/sg-03c5748db570cdc06",
            "description": "Allow alb inbound traffic on port 27911",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03c5748db570cdc06",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 27911,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e1a8d80031a2da3f"
                ],
                "self": false,
                "to_port": 27911
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b8e6ab6d712fe1cc"
                ],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "db-sg",
            "name_prefix": "",
            "owner_id": "972275553271",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-sg"
            },
            "tags_all": {
              "ChargeCode": "04NSOC.SUPP.0000.NSV",
              "Name": "app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c11ed682748d46b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jumpbox-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:972275553271:security-group/sg-0b8e6ab6d712fe1cc",
            "description": "Allow TLS inbound traffic from rdp and ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b8e6ab6d712fe1cc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "jumpbox-sg",
            "name_prefix": "",
            "owner_id": "972275553271",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jumpbox-sg"
            },
            "tags_all": {
              "ChargeCode": "04NSOC.SUPP.0000.NSV",
              "Name": "jumpbox-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c11ed682748d46b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app-ingress-db-app-inboudrule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 27911,
            "id": "sgrule-38035548",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03c5748db570cdc06",
            "security_group_rule_id": "sgr-0766062244ec31cb8",
            "self": false,
            "source_security_group_id": "sg-0e1a8d80031a2da3f",
            "timeouts": null,
            "to_port": 27911,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.app-sg",
            "aws_security_group.db-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app-ingress-db-jb-inboudrule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 3389,
            "id": "sgrule-1809409175",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03c5748db570cdc06",
            "security_group_rule_id": "sgr-0f10fbc041afbc8ba",
            "self": false,
            "source_security_group_id": "sg-0b8e6ab6d712fe1cc",
            "timeouts": null,
            "to_port": 3389,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.db-sg",
            "aws_security_group.jumpbox-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app-ingress-jumpbox-inboudrule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 3389,
            "id": "sgrule-1486778270",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e1a8d80031a2da3f",
            "security_group_rule_id": "sgr-0323a28eda3faaec0",
            "self": false,
            "source_security_group_id": "sg-0b8e6ab6d712fe1cc",
            "timeouts": null,
            "to_port": 3389,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.app-sg",
            "aws_security_group.jumpbox-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress-http-inboudrule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "http_port",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-919128447",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a04c16ccc2272afa",
            "security_group_rule_id": "sgr-050e693c9169ee679",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "https_port",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-3963374359",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a04c16ccc2272afa",
            "security_group_rule_id": "sgr-0b3f8b065331f973f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress-rdp-ssh-inboudrule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "rdp_port",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 3389,
            "id": "sgrule-1139856224",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b8e6ab6d712fe1cc",
            "security_group_rule_id": "sgr-009a6f483d64bff6e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3389,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.jumpbox-sg",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "ssh_port",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-3840721006",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b8e6ab6d712fe1cc",
            "security_group_rule_id": "sgr-08149e71ff6159cfa",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.jumpbox-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nginx-ingress-http-inboudrule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 80,
            "id": "sgrule-765839412",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e1a8d80031a2da3f",
            "security_group_rule_id": "sgr-02d8781efeb23bb73",
            "self": false,
            "source_security_group_id": "sg-0a04c16ccc2272afa",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_security_group.app-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:972275553271:subnet/subnet-0f6192fade250a173",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f6192fade250a173",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "972275553271",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-app-sn"
            },
            "tags_all": {
              "ChargeCode": "04NSOC.SUPP.0000.NSV",
              "Name": "private-app-sn"
            },
            "vpc_id": "vpc-0c11ed682748d46b2"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:972275553271:subnet/subnet-0ed86abb35d9a6c5c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed86abb35d9a6c5c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "972275553271",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-app-sn"
            },
            "tags_all": {
              "ChargeCode": "04NSOC.SUPP.0000.NSV",
              "Name": "private-app-sn"
            },
            "vpc_id": "vpc-0c11ed682748d46b2"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:972275553271:subnet/subnet-00b5194cb7083bd61",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b5194cb7083bd61",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "972275553271",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-app-db"
            },
            "tags_all": {
              "ChargeCode": "04NSOC.SUPP.0000.NSV",
              "Name": "private-app-db"
            },
            "vpc_id": "vpc-0c11ed682748d46b2"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:972275553271:subnet/subnet-031ef2cd2f541f115",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-031ef2cd2f541f115",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "972275553271",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-app-db"
            },
            "tags_all": {
              "ChargeCode": "04NSOC.SUPP.0000.NSV",
              "Name": "private-app-db"
            },
            "vpc_id": "vpc-0c11ed682748d46b2"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:972275553271:subnet/subnet-0a4aada047f393b9c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a4aada047f393b9c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "972275553271",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-sn"
            },
            "tags_all": {
              "ChargeCode": "04NSOC.SUPP.0000.NSV",
              "Name": "public-sn"
            },
            "vpc_id": "vpc-0c11ed682748d46b2"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:972275553271:subnet/subnet-02df1e0ac5f5b2262",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02df1e0ac5f5b2262",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "972275553271",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-sn"
            },
            "tags_all": {
              "ChargeCode": "04NSOC.SUPP.0000.NSV",
              "Name": "public-sn"
            },
            "vpc_id": "vpc-0c11ed682748d46b2"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:972275553271:vpc/vpc-0c11ed682748d46b2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a18dcbf220ebf363",
            "default_route_table_id": "rtb-0d6710b65f3424ca1",
            "default_security_group_id": "sg-0dff62ac291848f79",
            "dhcp_options_id": "dopt-0157f2c8538ea01f3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c11ed682748d46b2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d6710b65f3424ca1",
            "owner_id": "972275553271",
            "tags": {
              "Name": "CloudWave-vpc"
            },
            "tags_all": {
              "ChargeCode": "04NSOC.SUPP.0000.NSV",
              "Name": "CloudWave-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}